# language-test

./: .gitignore  Cargo.toml  LICENSE  README.md  dev.sh
compiler/: Cargo.toml
compiler/src/: error.rs  lib.rs  main.rs  parser.rs  token.rs  ty.rs
compiler/src/codegen/: mod.rs
compiler/src/error/: mod.rs  reporter.rs
compiler/src/lexer/: mod.rs  token.rs  token_tree.rs
compiler/src/p1_syntax/: grammar.lalrpop  mod.rs
compiler/src/p2_find_items/: data.rs  error.rs  mod.rs
compiler/src/p2_items/: data.rs  error.rs  mod.rs
compiler/src/p3_body/: data.rs  error.rs  mod.rs
compiler/src/p4_codegen/: error.rs  mod.rs
compiler/src/parser/: data.rs  grammar.lalrpop  mod.rs
compiler/src/pass1/: data.rs  mod.rs
compiler/src/pn_codegen/: mod.rs
compiler/src/semantic/: mod.rs  symbol_table.rs
compiler/src/token/: data.rs  error.rs  mod.rs  test.rs
dreamland/: cat.son  control.son  convert.son  core.son  fib.son  loop.son  order.son  rectangle.son  simple.son
harness/: Cargo.toml  build.rs
harness/src/: lib.rs  main.rs
libary/core/: boolean.son  convert.son  identity.son  optional.md  optional.son  traits.son  unit.son
libary/core/compare/: equal.son  module.son  order.son
libary/core/primitive/: boolean.md  boolean.son  never.son  unit.son
libsonance/: Cargo.toml  build.rs
libsonance/src/: main.rs
src/: lib.rs  main.rs  token_tree.rs
src/ast/: data.rs  grammar.lalrpop  mod.rs
src/codegen/: mod.rs
src/item/: data.rs  mod.rs
src/lexer/: mod.rs  token_tree.rs
src/parser/: mod.rs
syntax/: Cargo.toml  build.rs
syntax/src/: data.rs  error.rs  lib.rs  main.rs  walk.rs
tree-sitter/: grammar.js
tree-sitter-language-test/: binding.gyp  grammar.js  index.js  package.json
tree-sitter-language-test/src/: binding.cc  grammar.json  node-types.json  parser.c
tree-sitter-language-test/test/corpus/: function.txt  item.txt
tree-sitter-sonance/: .gitignore  grammar.js  package.json
tree-sitter/src/: grammar.json  node-types.json  parser.c
(+3 files in other folders)
