[package]
name = "language-test"
version = "0.1.0"
authors = ["jamesBeeProg <jamesBeeProg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
logos = "0.11.4"
thiserror = "1.0"
cranelift = "0.66"
cranelift-module = "0.66"
cranelift-object= "0.66"
target-lexicon = "0.10.0"
