[package]
name = "language-test-compiler"
version = "0.1.0"
authors = ["jamesBeeProg <jamesBeeProg@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
lalrpop-util = "0.19.0"
regex = "1"
thiserror = "1.0"
cranelift = "0.66"
cranelift-module = "0.66"
cranelift-object= "0.66"
target-lexicon = "0.10.0"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
