[package]
name = "language-test-compiler"
version = "0.1.0"
authors = ["jamesBeeProg <jamesBeeProg@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
lalrpop-util = "0.19"
regex = "1"
thiserror = "1.0"
cranelift = "0.68"
cranelift-module = "0.68"
cranelift-object= "0.68"
target-lexicon = "0.11"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
